# sldl

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: bilingual_documentation.md  ci_workflow.md  cli_help_reference.json  cli_help_reference.md  commands_reference.md  compatibility_policy.md  config_reference.md  diagnostics_reference.json  diagnostics_reference.md  document_model.md  generated_template_reference.json  generated_template_reference.md  getting_started.md  github_repository_guide.md  index.md  known_limitations.md  migration_guide_v0_to_v1.md  project_workflow.md  reference_index.json  reference_index.md  release_process.md  release_report.json  release_report.md  release_summary.json  sldl_language_reference.md  template_manifest_migration.md  template_schema_binding.md  v1_0_10_release_notes.md  v1_0_11_release_notes.md  v1_0_12_release_notes.md  v1_0_13_release_notes.md  v1_0_14_release_notes.md  v1_0_15_release_notes.md  v1_0_16_release_notes.md  v1_0_1_release_notes.md  v1_0_2_release_notes.md  v1_0_3_release_notes.md  v1_0_4_release_notes.md  v1_0_5_release_notes.md  v1_0_6_release_notes.md  (+5 more)
examples/: README.md  export_labels_en.json  export_labels_ja.json  golden_snapshot.json  latex_build_platex_dvipdfmx.json  latex_build_platex_dvipdfmx_dry_run.json  official_project_overview_en.sldl  official_project_overview_ja.sldl  project_official_examples.json  references.bib  release_check.json  release_summary_smoke_check.json  sldl_schema.json  template_manifest_bad_missing_schema.json  template_manifest_bad_missing_template.json  template_manifest_bad_wrong_config_type.json  template_schema_binding_failure_project.json  template_schema_binding_project.json
schemas/: default_document_types.json
sldl_compiler/: __init__.py  ast_nodes.py  bibtex_importer.py  checker.py  cli.py  config_tools.py  diagnostic_reference.py  diagnostics.py  formatter.py  (+22 more)
(+59 files in other folders)
