[project]
name = "sldl-compiler"
version = "1.0.14"
description = "SLDL v1.0.14 stable bilingual release with GitHub Actions CI dependency hotfix"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7.1",
]

[project.scripts]
sldlc = "sldl_compiler.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["-p", "no:ddtrace", "-p", "no:metadata", "-p", "no:asyncio", "-p", "no:anyio", "-p", "no:json-report", "-p", "no:cov", "-p", "no:faker", "-p", "no:Faker"]
