[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sldl-compiler"
version = "1.0.16"
description = "SLDL v1.0.16 stable bilingual release with GitHub Actions editable-install metadata fix"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7.1",
]

[project.scripts]
sldlc = "sldl_compiler.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sldl_compiler*"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["-p", "no:ddtrace", "-p", "no:metadata", "-p", "no:asyncio", "-p", "no:anyio", "-p", "no:json-report", "-p", "no:cov", "-p", "no:faker", "-p", "no:Faker"]
